fix: flex  wrap bug

--- a/src/components/DataManagement/ProductEdit/index.module.less
+++ b/src/components/DataManagement/ProductEdit/index.module.less
@@ -73,6 +73,7 @@
 
       .exist_relations {
         display: flex;
+        flex-wrap: wrap;
 
         .exist_relation {
           margin-top: 8px;
